--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 
     <!--? JS Import -->
-    <script src="./script.js/script.js"></script>   
+    <script src="./script.js/snack-1.js"></script>   
     </body>
 </html>
